--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,9 @@
 
     <application
         android:allowBackup="true"
+
         android:icon="@mipmap/ic_launcher"
-        android:label=""
+        android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionAndStatusBar"
@@ -18,8 +19,8 @@
         android:fullBackupContent="@xml/backup_descriptor">
         <activity
             android:name=".MainActivity"
-            android:label=""
-            android:theme="@style/AppTheme.NoActionBar">
+
+            android:theme="@style/AppTheme.NoActionAndStatusBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
