--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:allowBackup="true"
 
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="ANI"
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionAndStatusBar"
@@ -29,7 +29,7 @@
         </activity>
         <activity
             android:name=".ActivityFonte"
-            android:label=""
+
             android:theme="@style/AppTheme.NoActionAndStatusBar" />
         <activity
             android:name=".NoticiaActivity"
